link the algo detail page

--- a/css/theme.css
+++ b/css/theme.css
@@ -24,7 +24,7 @@
      margin-bottom: 5px;
   }
   #table-container{
-    width: 50% !important
+    width: 50% !important;
     max-width: 50%;
   }
   .well{
